# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md
Breakout/: CMakeLists.txt
Breakout/src/: game.cpp  game.h  main.cpp  resourceManager.cpp  resourceManager.h  shader.cpp  shader.h  texture.cpp  texture.h
GettingStarted/: CMakeLists.txt
GettingStarted/src/: main.cpp
Light/: CMakeLists.txt
Light/src/: main.cpp
ModelLoading/: CMakeLists.txt
ModelLoading/src/: main.cpp
Tests/: CMakeLists.txt
Tests/src/: main.cpp
TextRendering/: CMakeLists.txt
TextRendering/src/: main.cpp
includes/internal/: camera.h  mesh.h  model.h  shader.h
resources/shaders/: CoordinateSystem.vs  Light.fs  Light.vs  LightCasters.fs  LightCasters.vs  LightningMaps.fs  MaterialLight.fs  Materials.fs  glyphs.vs  shader.fs  shader.vs  texture.fs  texture.vs  textures.fs  textures.vs  transform.fs  transform.vs
